apps/c6h12o6-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c6h12o6-api
  namespace: api
  labels:
    app: c6h12o6-api
spec:
  selector:
    matchLabels:
      app: c6h12o6-api
  template:
    metadata:
      labels:
        app: c6h12o6-api
    spec:
      containers:
      - name: c6h12o6-api
        image: hyeonwoo5342/c6h12o6-api:3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: '200Mi'
            cpu: '50m'
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
