apps/c6h12o6-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: c6h12o6-api-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.c6h12o6.kr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: c6h12o6-api
            port:
              number: 80
